2010-11-01  Werner Koch  <wk@g10code.com>

	* assuan-socket.c (S_IRUSR) [W32]: Define if not defined.

	* sysutils.c: Remove include of devload.h.

	* assuan-defs.h [HAVE_WINSOCK2_H]: Include winsock2.h prior to
	windows.h.
	* assuan-pipe-server.c: Ditto.
	* sysutils.c: Ditto.
	* assuan-socket-server.c: Ditto.
	* assuan-pipe-connect.c: Ditto.
	* assuan-socket-connect.c: Ditto.
	* assuan-uds.c: Ditto.
	* assuan-logging.c: Ditto.
	* system-w32ce.c: Ditto.
	* assuan-io.c: Ditto.

	* w32-types.inc.h [_MSC_VER]: Define ssize_t and pid_t.

	* w32ce-fd-t.inc.h, w32-fd-t.inc.h, posix-fd-t.inc.h, debug.h:
	s/inline/GPG_ERR_INLINE/.
	* assuan.h.in: Let mkheader write the sys/types.h and unistd.h
	include lines.
	* mkheader.c: Change accordingly.

	Guard include of sys/types.h, sys/stat.h, sys/time.h and unistd.h.

2010-09-17  Werner Koch  <wk@g10code.com>

	* assuan-socket-connect.c (INADDR_NONE): New replacement.  Fixes
	bug#1282.

2010-09-01  Werner Koch  <wk@g10code.com>

	* assuan.h.in (ASSUAN_NO_LOGGING): New.
	* assuan-defs.h (struct assuan_context_s): Add FLAGS.NO_LOGGING.
	* context.c (assuan_set_flag, assuan_get_flag): Support new flag.
	* assuan-logging.c (_assuan_log_control_channel): Implement new flag.

2010-08-11  Werner Koch  <wk@g10code.com>

	* assuan.h.in (ASSUAN_CONVEY_COMMENTS): New.
	* assuan-defs.h (struct assuan_context_s): Add flags.CONVEY_COMMENTS.
	* context.c (assuan_set_flag, assuan_get_flag): Support this flag.
	(_assuan_read_from_server): Add arg CONVEY_COMMENTS.  Change all
	callers.
	* client.c (assuan_transact): Implement new flags.

2010-08-09  Werner Koch  <wk@g10code.com>

	* assuan-socket-connect.c (assuan_socket_connect): Fix ipv6
	literal IP case.

2010-08-03  Marcus Brinkmann  <marcus@g10code.de>

	* gpgcedev.c (GPGCEDEV_IOCTL_ASSIGN_RVID): New call ASSIGN_RVID.
	(PIPE_FLAG_HALT_MONITOR): New flag.
	(struct pipeimpl_s): New members monitor_proc, monitor_access.
	(pipeimpl_new): Initialize them.
	(assert_pipeimpl): New function.